
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Added saving mask to Element Property grid to fire when saving the property set
- Removed deprecated file reference in login template
- Added System Settings to toggle news/security feeds in welcome panel
- Added System Setting to toggle on automatic checking of package updates in Package Management
- [#MODX-1751] Fixed erroneous reference in friendly alias setting description
- [#MODX-1752] Fixed bug where topmenu items without children didnt show even if they had an action
- Some css tweaks to login page
- Updated to xPDO 2.0.0 r419 to fix xPDOVehicle bug
- Fixed bug with Download Output button in MODx.Console
- Ensure forgot login activation email is HTML 
- Added Forgot Login link and form to manager, sends an activation email to specified email if user forgot login/password
- Fixed SQL sorting algorithm for package versions, added helper methods for comparing package versions
- Added $resource to properties passed to OnDocFormDelete in resource/delete processor
- Updated to xPDO 2.0.0 r417 ([#XPDO-40] Fixed getCount to work when passing a criteria with a class alias set)
- Enhanced striptags output filter to take a parameter of allowed tags
- Make sure $paths and $options are passed to OnCacheUpdate
- Added compression/concat references to login and browser tpls
- Fixed build.local.xml and build.xml scripts
- Added compress_css system setting for compressed CSS for releases, moved over modx-theme.css to templates css/ dir. Don't use compress_css without first running _build/build.local.xml Ant task.
- Cleaned up leftover PHP4 function definitions, unescaped SQL code, added proper accessor methods for private vars, other old code 