@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added a fix to tree refreshParentNode; enhanced modUserGroup::getUsersIn()
 - Added saving mask to Element Property grid to fire when saving the property set
 - Removed deprecated file reference in login template
 - Added System Settings to toggle news/security feeds in welcome panel
